--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client:3.2.2'
     // JWT
     implementation 'com.auth0:java-jwt:4.4.0'
+    // Spring Boot Data Redis
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis:3.2.2'
 
     // SpringBoot Test
     testImplementation 'org.springframework.boot:spring-boot-starter-test:3.2.2'
