--- a/build.gradle
+++ b/build.gradle
@@ -33,12 +33,15 @@ dependencies {
     runtimeOnly 'com.mysql:mysql-connector-j:8.2.0'
     // Spring Boot Security
     implementation 'org.springframework.boot:spring-boot-starter-security:3.2.2'
+    // Spring Boot OAuth2 Client
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client:3.2.2'
     // JWT
     implementation 'com.auth0:java-jwt:4.4.0'
     // Spring Boot Data Redis
     implementation 'org.springframework.boot:spring-boot-starter-data-redis:3.2.2'
     // Swagger
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
+
     // SpringBoot Test
     testImplementation 'org.springframework.boot:spring-boot-starter-test:3.2.2'
     // TestContainers
