--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,10 @@ dependencies {
     annotationProcessor "jakarta.persistence:jakarta.persistence-api:3.1.0"
     // MySQL
     runtimeOnly 'com.mysql:mysql-connector-j:8.2.0'
+    // Spring Boot Security
+    implementation 'org.springframework.boot:spring-boot-starter-security:3.2.2'
+    // Spring Boot OAuth2 Client
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client:3.2.2'
     // Feign Client
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:4.1.0'
     // Firebase Admin
