--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,9 @@ dependencies {
     annotationProcessor "jakarta.persistence:jakarta.persistence-api:3.1.0"
     // MySQL
     runtimeOnly 'com.mysql:mysql-connector-j:8.2.0'
+    // for spatial type in jpa 경도위도 계산
+    implementation 'org.hibernate:hibernate-spatial:6.4.1.Final'
+    implementation 'org.locationtech.jts:jts-core'
     // Spring Boot Security
     implementation 'org.springframework.boot:spring-boot-starter-security:3.2.2'
     // Spring Boot OAuth2 Client
