--- a/.github/workflows/cd_gradle.yml
+++ b/.github/workflows/cd_gradle.yml
@@ -68,7 +68,7 @@ jobs:
       - name: Docker Build and Push
         run: |
           docker build -f Dockerfile -t ${{ secrets.DOCKERHUB_USERNAME }}/mogakgo .
-          docer push ${{ secrets.DOCKERHUB_USERNAME }}/mogakgo
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/mogakgo
 
       ## deploy docker file to EC2
       - name: Deploy to Prod
@@ -91,7 +91,7 @@ jobs:
             docker run -d \
             --log-driver=awslogs \
             --log-opt awslogs-region=ap-northeast-2 \
-            --log-opt awslogs-group=web \
+            --log-opt awslogs-group=mogakgo-web \
             --log-opt awslogs-stream=log \
             --name mogakgo \
             -p 8080:8080 \
