[REFACT] ci, cd 수정

--- a/.github/workflows/cd_gradle.yml
+++ b/.github/workflows/cd_gradle.yml
@@ -49,6 +49,15 @@ jobs:
         run: echo "${{ secrets.APPLICATION }}" > ./src/main/resources/application.yml
         shell: bash
 
+      ## create firebase_service_key.json
+      - name: make firebase_service_key.json
+        run: touch ./src/main/resources/firebase_service_key.json
+        shell: bash
+
+      - name: save firebase_service_key.json from secrets
+        run: echo "${{ secrets.FIREBASE_SERVICE }}" > ./src/main/resources/firebase_service_key.json
+        shell: bash
+
       ## grant permission for gradlew
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
