--- a/.github/workflows/cd_gradle.yml
+++ b/.github/workflows/cd_gradle.yml
@@ -106,6 +106,7 @@ jobs:
             docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
             docker pull ${{ secrets.DOCKERHUB_USERNAME }}/mogakgo
             docker run -d \
+            --restart=always \
             --log-driver=awslogs \
             --log-opt awslogs-region=ap-northeast-2 \
             --log-opt awslogs-group=mogakgo-web \
