--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,8 @@ dependencies {
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
     // Spring Boot WebFlux
     implementation 'org.springframework.boot:spring-boot-starter-webflux:3.1.8'
+    // Spring Boot Data MongoDB
+    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb:3.1.8'
 
     // SpringBoot Test
     testImplementation 'org.springframework.boot:spring-boot-starter-test:3.1.8'
