--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb:3.1.8'
     // Spring Boot WebSocket
     implementation 'org.springframework.boot:spring-boot-starter-websocket:3.1.8'
+    // Flyway
+    implementation 'org.flywaydb:flyway-core'
+    implementation 'org.flywaydb:flyway-mysql'
 
     // SpringBoot Test
     testImplementation 'org.springframework.boot:spring-boot-starter-test:3.1.8'
