--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.1.8'
     // Spring Boot Validation
     implementation 'org.springframework.boot:spring-boot-starter-validation:3.1.8'
+    // Spring Boot AOP
+    implementation 'org.springframework.boot:spring-boot-starter-aop:3.1.8'
     // Lombok
     compileOnly 'org.projectlombok:lombok:1.18.30'
     annotationProcessor 'org.projectlombok:lombok:1.18.30'
