--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb:3.1.8'
     // Spring Boot WebSocket
     implementation 'org.springframework.boot:spring-boot-starter-websocket:3.1.8'
+    // Spring Retry
+    implementation 'org.springframework.retry:spring-retry'
     // Flyway
     implementation 'org.flywaydb:flyway-core:10.8.1'
     implementation 'org.flywaydb:flyway-mysql:10.8.1'
