--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.1.8'
     // Spring Boot Validation
     implementation 'org.springframework.boot:spring-boot-starter-validation:3.1.8'
+    // Spring Boot AOP
+    implementation 'org.springframework.boot:spring-boot-starter-aop:3.1.8'
     // Lombok
     compileOnly 'org.projectlombok:lombok:1.18.30'
     annotationProcessor 'org.projectlombok:lombok:1.18.30'
@@ -54,6 +56,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb:3.1.8'
     // Spring Boot WebSocket
     implementation 'org.springframework.boot:spring-boot-starter-websocket:3.1.8'
+    // Spring Retry
+    implementation 'org.springframework.retry:spring-retry'
     // Flyway
     implementation 'org.flywaydb:flyway-core:10.8.1'
     implementation 'org.flywaydb:flyway-mysql:10.8.1'
