[FIX] Update running process for docker-compose in ci_gradle.yml

--- a/.github/workflows/ci_gradle.yml
+++ b/.github/workflows/ci_gradle.yml
@@ -32,6 +32,10 @@ jobs:
       ## Gradle Wrapper grant permission
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
+
+      ## Run docker-compose.yml
+      - name: run docker-compose.yml
+        run: docker-compose up -d
   
       ## create application.yml
       - name: make application.yml
